<resources>
    <string name="app_name">Vesere</string>
    <string name="title_chooseACategory">Choose a category for displaying</string>
    <string name="oil_changing">Oil change</string>
    <string name="antifreeze_changing">Antifreeze change</string>
    <string name="maintenance">Maintenance</string>
    <string name="computer_diagnostics">Computer diagnostics</string>
    <string name="brake_repair">Brake repair</string>
    <string name="weel_balance">Weel balance</string>
    <string name="engine_work">Engine work</string>
    <string name="other">Other</string>
    <string name="electrical_systems">Electrical systems</string>
    <string name="new_event">New Event</string>
    <string name="event">Event</string>
    <string name="price">Price</string>
    <string name="comment">Comment</string>
    <string name="service_station">Service Station</string>
    <string name="service_name">Service\'s name</string>
    <string name="maintenance_task">Maintenance Task</string>
    <string name="date">Date</string>
    <string name="service_life">Service Life</string>
    <string name="car_mileage">Car mileage</string>
    <string name="months">months</string>
    <string name="rating">Service\'s rating</string>
    <string name="not_ok">Not Ok</string>
    <string name="ok">Ok</string>
    <string name="events">Events</string>
    <string name="event1_text">Oil change \nDate: 08.09.2019 \nService Life: 1 year \nCar mileage: 123 876 km \nComment: -</string>
    <string name="event2_text">Computer diagnostics \nDate: 12.03.2020 \nService Life: - \nCar mileage: 124 320 km \nComment: New diagnostics in 1 month \nService station: Rob&amp;Bob \nService"'"s Rating: Ok\nPrice: $12</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="plus">+</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="enter_maintenance_task">Please enter maintenance task</string>
    <string name="save">Save</string>
    <string name="save_button">Save button</string>

    <!-- Output to TextView styled with HTML -->
    <string name="date_AE"><![CDATA[<b>Date: </b>]]></string>
    <string name="serviceLive_AE"><![CDATA[<b>Service Life: </b>]]></string>
    <string name="months_AE"><![CDATA[months]]></string>
    <string name="carMileage_AE"><![CDATA[<b>Car mileage: </b>]]></string>
    <string name="comment_AE"><![CDATA[<b>Comment: </b>]]></string>
    <string name="price_AE"><![CDATA[<b>Price: </b>$]]></string>
    <string name="serviceStation_AE"><![CDATA[<b>Service Station: </b>]]></string>
    <string name="transmission">Transmission</string>
    <string name="all">All</string>
    <string name="dollarSight">$</string>
    <string name="clear_all">Clear All</string>
    <string name="close">close</string>
    <string name="delete_all_records">delete_all_records</string>
    <string name="service_station_wc">Service station:</string>
    <string name="date_wc">Date:</string>
    <string name="service_life_wc">Service life:</string>
    <string name="car_mileage_wc">Car mileage:</string>
    <string name="price_wc">Price:</string>
    <string name="rating_wc">Rating:</string>
    <string name="comment_wc">Comment:</string>
    <string name="edit_record">Edit record</string>
    <string name="kilometers">km</string>

    <string-array name="events_array">
        <item>Oil change</item>
        <item>Antifreeze change</item>
        <item>Maintenance</item>
        <item>Computer diagnostics</item>
        <item>Brake repair</item>
        <item>Engine work</item>
        <item>Electrical Systems</item>
        <item>Transmission</item>
        <item>Other</item>
    </string-array>

</resources>