<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.maxgrachev.vesere.FragmentTitle">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_title"
                style="@style/title_text"
                android:layout_marginTop="16dp"
                android:text="@string/title_chooseACategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/scrollView_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_all"
                        style="@style/title_button"
                        android:text="@string/all"
                        app:layout_constraintBottom_toTopOf="@+id/button_transmission"
                        app:layout_constraintEnd_toStartOf="@+id/button_oil"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_transmission"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_transmission"
                        style="@style/title_button"
                        android:text="@string/transmission"
                        app:layout_constraintBottom_toTopOf="@+id/button_maintenance"
                        app:layout_constraintEnd_toStartOf="@+id/button_antifreeze"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_all"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_maintenance"
                        style="@style/title_button"
                        android:text="@string/maintenance"
                        app:layout_constraintBottom_toTopOf="@+id/button_brake"
                        app:layout_constraintEnd_toStartOf="@+id/button_diagnostics"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_transmission"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_diagnostics"
                        style="@style/title_button"
                        android:text="@string/computer_diagnostics"
                        app:layout_constraintBottom_toTopOf="@+id/button_engineWork"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_maintenance"
                        app:layout_constraintTop_toBottomOf="@+id/button_antifreeze"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_brake"
                        style="@style/title_button"
                        android:text="@string/brake_repair"
                        app:layout_constraintBottom_toTopOf="@+id/button_electrical"
                        app:layout_constraintEnd_toStartOf="@+id/button_engineWork"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_maintenance"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_engineWork"
                        style="@style/title_button"
                        android:text="@string/engine_work"
                        app:layout_constraintBottom_toTopOf="@+id/button_other"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_brake"
                        app:layout_constraintTop_toBottomOf="@+id/button_diagnostics"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_electrical"
                        style="@style/title_button"
                        android:text="@string/electrical_systems"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_other"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_brake"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_other"
                        style="@style/title_button"
                        android:singleLine="false"
                        android:text="@string/other"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_electrical"
                        app:layout_constraintTop_toBottomOf="@+id/button_engineWork"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_oil"
                        style="@style/title_button"
                        android:text="@string/oil_changing"
                        app:layout_constraintBottom_toTopOf="@+id/button_antifreeze"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_all"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/button_antifreeze"
                        style="@style/title_button"
                        android:text="@string/antifreeze_changing"
                        app:layout_constraintBottom_toTopOf="@+id/button_diagnostics"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/button_transmission"
                        app:layout_constraintTop_toBottomOf="@+id/button_oil"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:id="@+id/button_create_Title"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif-light"
            android:text="@string/add"
            android:textColor="#303030"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>