<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settingViewModel"
            type="ru.maxgrachev.vesere.setting.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_Setting"
            style="@style/title_text"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="106dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="#EF9A9A"
            android:text="@string/delete_all_records"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Setting"
            android:onClick="@{()->settingViewModel.onClear()}"
            tools:text="@string/clear_all" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>