<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editRecordViewModel"
            type="ru.maxgrachev.vesere.ui.fragments.editrecord.EditRecordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_editRecord"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_record"
            app:layout_constraintBottom_toTopOf="@+id/scrollView_editRecord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <ScrollView
            android:id="@+id/scrollView_editRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_editRecord">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_date_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    app:layout_constraintBottom_toTopOf="@+id/editText_maintenanceTask_editRecord"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/clicable_editText_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusableInTouchMode = "false"/>

<!--                    app:textDate="@{editRecordViewModel.event}"-->
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_maintenanceTask_editRecord"
                    style="@style/autocomplete_editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maintenance_task"
                    app:layout_constraintBottom_toTopOf="@+id/editText_serviceLife_editRecord"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_date_editRecord">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete|textCapSentences"
                        />
<!--                    app:textEvent="@{editRecordViewModel.event}"-->
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_serviceLife_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_life"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@+id/editText_mileageValue_editRecord"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_maintenanceTask_editRecord"
                    app:suffixText="@string/months">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberDecimal"/>
<!--                    app:textServiceLife="@{editRecordViewModel.event}"-->
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_mileageValue_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/car_mileage"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@+id/editText_price_editRecord"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_serviceLife_editRecord"
                    app:suffixText="@string/kilometers">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberDecimal"
                        app:textCarMileage="@{editRecordViewModel.event}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_price_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    app:layout_constraintBottom_toTopOf="@+id/editTextText_serviceName_editRecord"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_mileageValue_editRecord"
                    app:prefixText="@string/dollarSight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|numberDecimal"
                        app:textPrice="@{editRecordViewModel.event}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextText_serviceName_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_name"
                    app:layout_constraintBottom_toTopOf="@+id/text_rating_editRecord"
                    app:layout_constraintEnd_toStartOf="@+id/text_rating_editRecord"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editText_price_editRecord"
                    app:layout_constraintTop_toBottomOf="@+id/editText_price_editRecord">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"
                        app:textServiceStation="@{editRecordViewModel.event}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_rating_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    app:layout_constraintBottom_toTopOf="@+id/editText_comment_editRecord"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextText_serviceName_editRecord" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_rating_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:text="@string/not_ok"
                    ratingSwitchIsChecked="@{editRecordViewModel.event}"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextText_serviceName_editRecord"
                    app:layout_constraintStart_toEndOf="@+id/text_rating_editRecord"
                    app:layout_constraintTop_toBottomOf="@+id/text_rating_editRecord" />

                <TextView
                    android:id="@+id/text_ok_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@android:string/ok"
                    app:layout_constraintBottom_toBottomOf="@+id/switch_rating"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/switch_rating_editRecord"
                    app:layout_constraintTop_toTopOf="@+id/switch_rating_editRecord" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editText_comment_editRecord"
                    style="@style/editText_newRecordFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_rating_editRecord">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences"
                        app:textComment="@{editRecordViewModel.event}"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_update_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_button"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save_black_18dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
